Memory match game

--- a/games.html
+++ b/games.html
@@ -52,6 +52,14 @@
           <a class="cta cta-primary" href="typing.html">Play Typing Game</a>
         </div>
       </div>
+      <div class="game-card">
+        <img src="images/games/match game.png" alt="Memory Match icon" style="width:100%;height:160px;object-fit:cover;border-radius:8px;" />
+        <h3>Memory Match</h3>
+        <p class="subtitle">Flip cards and match pairs to win.</p>
+        <div style="margin-top:12px;display:flex;gap:8px;">
+          <a class="cta cta-primary" href="memory.html">Play Memory Match</a>
+        </div>
+      </div>
     </div>
   </main>
 
