--- a/games.html
+++ b/games.html
@@ -8,8 +8,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
   <style>
     .games-wrap { max-width: 920px; margin: 36px auto; padding: 18px; }
-    .games-list { display:flex; gap:12px; flex-wrap:wrap; }
-    .game-card { border:1px solid var(--border); background:var(--surface); padding:14px; border-radius:10px; min-width:220px; box-shadow:var(--shadow-soft); }
+    .games-list { display:grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap:12px; }
+    .game-card { border:1px solid var(--border); background:var(--surface); padding:14px; border-radius:10px; box-shadow:var(--shadow-soft); display:flex; flex-direction:column; justify-content:space-between; min-height:340px; }
+    .game-card img.icon { width:100%; height:180px; object-fit:cover; border-radius:8px; }
     .typing-area { margin-top:16px; }
     .target-text { background:var(--bg); padding:12px; border-radius:8px; border:1px solid var(--border); font-size:15px; color:var(--muted); }
     .typing-input { width:100%; padding:10px; margin-top:8px; border-radius:8px; border:1px solid var(--border); }
@@ -45,17 +46,31 @@
 
     <div class="games-list">
       <div class="game-card">
-        <img src="images/games/typing.jpg" alt="Typing Game icon" style="width:100%;height:160px;object-fit:cover;border-radius:8px;" />
-        <h3>Typing Game</h3>
-        <p class="subtitle">Test your typing speed and accuracy.</p>
+        <img src="images/games/typing.jpg" alt="Typing Game icon" class="icon" />
+        <div>
+          <h3>Typing Game</h3>
+          <p class="subtitle">Test your typing speed and accuracy.</p>
+        </div>
         <div style="margin-top:12px;display:flex;gap:8px;">
           <a class="cta cta-primary" href="typing.html">Play Typing Game</a>
         </div>
       </div>
       <div class="game-card">
-        <img src="images/games/match game.png" alt="Memory Match icon" style="width:100%;height:160px;object-fit:cover;border-radius:8px;" />
-        <h3>Memory Match</h3>
-        <p class="subtitle">Flip cards and match pairs to win.</p>
+        <img src="images/games/sudoku.jpg" alt="Sudoku icon" class="icon" />
+        <div>
+          <h3>Sudoku</h3>
+          <p class="subtitle">Classic 9×9 Sudoku — generate and solve puzzles by difficulty.</p>
+        </div>
+        <div style="margin-top:12px;display:flex;gap:8px;">
+          <a class="cta cta-primary" href="sudoku.html">Play Sudoku</a>
+        </div>
+      </div>
+      <div class="game-card">
+        <img src="images/games/match game.png" alt="Memory Match icon" class="icon" />
+        <div>
+          <h3>Memory Match</h3>
+          <p class="subtitle">Flip cards and match pairs to win.</p>
+        </div>
         <div style="margin-top:12px;display:flex;gap:8px;">
           <a class="cta cta-primary" href="memory.html">Play Memory Match</a>
         </div>
