--- a/Games/memory.html
+++ b/Games/memory.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Memory Match — Games</title>
-  <link rel="stylesheet" href="porfolio.css">
+  <link rel="stylesheet" href="../porfolio.css">
   <style>
     .game-page { max-width: 920px; margin: 36px auto; padding: 18px; }
     .game-board { display:grid; gap:10px; grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); }
@@ -30,8 +30,8 @@
         </div>
       </div>
       <div style="margin-left:auto;display:flex;gap:8px;align-items:center;">
-        <a class="cta" href="games.html">Back to Games</a>
-        <a class="cta" href="porfolio.html">Back to Portfolio</a>
+        <a class="cta" href="../games.html">Back to Games</a>
+        <a class="cta" href="../porfolio.html">Back to Portfolio</a>
       </div>
     </div>
   </header>
