--- a/Games/typing.html
+++ b/Games/typing.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Typing Game — Games</title>
-  <link rel="stylesheet" href="porfolio.css">
+  <link rel="stylesheet" href="../porfolio.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
   <style>
     .game-page { max-width: 920px; margin: 36px auto; padding: 18px; }
@@ -28,8 +28,8 @@
         </div>
       </div>
       <div style="margin-left:auto;display:flex;gap:8px;align-items:center;">
-        <a class="cta" href="games.html">Back to Games</a>
-        <a class="cta" href="porfolio.html">Back to Portfolio</a>
+        <a class="cta" href="../games.html">Back to Games</a>
+        <a class="cta" href="../porfolio.html">Back to Portfolio</a>
       </div>
     </div>
   </header>
