--- a/games.html
+++ b/games.html
@@ -52,7 +52,7 @@
           <p class="subtitle">Test your typing speed and accuracy.</p>
         </div>
         <div style="margin-top:12px;display:flex;gap:8px;">
-          <a class="cta cta-primary" href="typing.html">Play Typing Game</a>
+          <a class="cta cta-primary" href="Games/typing.html">Play Typing Game</a>
         </div>
       </div>
       <div class="game-card">
@@ -62,7 +62,7 @@
           <p class="subtitle">Classic 9×9 Sudoku — generate and solve puzzles by difficulty.</p>
         </div>
         <div style="margin-top:12px;display:flex;gap:8px;">
-          <a class="cta cta-primary" href="sudoku.html">Play Sudoku</a>
+          <a class="cta cta-primary" href="Games/sudoku.html">Play Sudoku</a>
         </div>
       </div>
       <div class="game-card">
@@ -72,7 +72,27 @@
           <p class="subtitle">Flip cards and match pairs to win.</p>
         </div>
         <div style="margin-top:12px;display:flex;gap:8px;">
-          <a class="cta cta-primary" href="memory.html">Play Memory Match</a>
+          <a class="cta cta-primary" href="Games/memory.html">Play Memory Match</a>
+        </div>
+      </div>
+      <div class="game-card">
+        <img src="images/games/FourInaRow.png" alt="Connect Four icon" class="icon" />
+        <div>
+          <h3>Connect Four</h3>
+          <p class="subtitle">Drop discs and connect four in a row to win.</p>
+        </div>
+        <div style="margin-top:12px;display:flex;gap:8px;">
+          <a class="cta cta-primary" href="Games/connect4.html">Play Connect Four</a>
+        </div>
+      </div>
+      <div class="game-card">
+        <img src="images/games/checker.png" alt="Checkers icon" class="icon" />
+        <div>
+          <h3>Checkers</h3>
+          <p class="subtitle">Play classic checkers locally or vs computer (AI).</p>
+        </div>
+        <div style="margin-top:12px;display:flex;gap:8px;">
+          <a class="cta cta-primary" href="Games/checkers.html">Play Checkers</a>
         </div>
       </div>
     </div>
