--- a/Games/memory.html
+++ b/Games/memory.html
@@ -62,7 +62,7 @@
       const imageFiles = [
         'andriod.webp','c++.webp','copilot.webp','csharp.webp','css.jpg','html.jpg','java.jpg','js.jpg','php.jpg','python.webp','react.jpg'
       ];
-      const basePath = 'images/games/memory match/';
+      const basePath = '../images/games/memory match/';
 
       const boardEl = document.getElementById('board');
       const movesEl = document.getElementById('moves');
