--- a/games.html
+++ b/games.html
@@ -95,6 +95,16 @@
           <a class="cta cta-primary" href="Games/checkers.html">Play Checkers</a>
         </div>
       </div>
+      <div class="game-card">
+        <img src="images/games/snake.png" alt="Snake icon" class="icon" />
+        <div>
+          <h3>Snake</h3>
+          <p class="subtitle">Classic snake — eat food, grow longer, avoid walls and yourself.</p>
+        </div>
+        <div style="margin-top:12px;display:flex;gap:8px;">
+          <a class="cta cta-primary" href="Games/snake.html">Play Snake</a>
+        </div>
+      </div>
     </div>
   </main>
 
